# rust-sui-examples

./: LICENSE  README.md
bevy-client/: Cargo.toml  README.md
bevy-client/src/: main.rs
dioxus-sui-client/: README.md
dmud-immortal/: README.md
dmud-mortal/: README.md
dmud_poc/: DESIGN.md  Move.toml  README.md  TODO.md  TOTEST.md
dmud_poc/docs/: CRC.md  CoreQuestions.md  README.md  References.md  SuiDS.md  Terminology.md  sui.md
dmud_poc/sources/: character.move  coin.move  command.move  inventory.move  item.move  nft.move  player.move  player_state.move  social_world.move  space.move  text_commander.move  user.move  user_channels.move  world.move  zone.move
egui-sui-client/: Cargo.toml  README.md
egui-sui-client/src/: main.rs
gui-mint-nft/: Cargo.toml  README.md
gui-mint-nft/src/: main.rs
mint-nft/: Cargo.toml
mint-nft/src/: main.rs
my_nft/: Move.toml
my_nft/sources/: my_nft.move
nfts/: .gitignore
ref/: README.md
ref/clap/: README.md
ref/move/: README.md
ref/move/basics/sources/: object.move
ref/move/games/: Move.toml  README.md
ref/move/move_tutorial/: README.md
ref/move/nfts/: README.md
ref/move/nfts/sources/: cross_chain_airdrop.move
ref/nfts/: Move.toml
ref/requestty/: README.md
ref/requestty/examples/: int.rs
sui-client/: .gitignore  Cargo.toml  README.md  TODO.md  config.yaml
sui-client/src/: configuration.rs  dmud.rs  event_subcription.rs  event_subscription.rs  get_owned_objects.rs  lib.rs  main.rs  mint_nft.rs  new_world.rs  transfer_coins.rs
sui-client/tests/: tests.rs
