[package]
name = "gui-mint-nft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["desktop"] }

tokio = { features = ["full"] }
anyhow = "1.0.66"
workspace-hack = "0.1.0"

sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }
