[package]
name = "sui-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }
#bitflags = { path = "my-bitflags", version = "1.0" }
#sui-sdk = { path = "/Users/cpp.wdshin/sui"}

anyhow = "1.0.64"
async-trait = "0.1.57"
jsonrpsee = { version = "0.15.1", features = ["full"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.83"
futures-core = "0.3.21"
futures = "0.3.23"
tokio = "1.20.1"
rand = "0.8.5"
bcs = "0.1.4"

sui-json-rpc = { path = "/Users/cpp.wdshin/sui/crates/sui-json-rpc" }
sui-transaction-builder = { path = "/Users/cpp.wdshin/sui/crates/sui-transaction-builder" }
sui-json-rpc-types= { path = "/Users/cpp.wdshin/sui/crates/sui-json-rpc-types" }
sui-types = { path = "/Users/cpp.wdshin/sui/crates/sui-types" }
sui-json = { path = "/Users/cpp.wdshin/sui/crates/sui-json" }
sui-core = { path = "/Users/cpp.wdshin/sui/crates/sui-core" }
sui-config = { path = "/Users/cpp.wdshin/sui/crates/sui-config" }
sui-keys =  { path = "/Users/cpp.wdshin/sui/crates/sui-keys" }

