[package]
name = "sui-client"
version = "0.1.0"
authors = ["Wondong Shin <wodshin@gmail.com>"]
edition = "2021"
description = "sui move contract caller"
readme = "README.md"
keywords = ["gamedev", "sui"]

[[bin]]
name = "sui-client"
test = false
bench = false
path = "src/main.rs"

[[bin]]
name = "sui-client-objects"
test = false
bench = false
path = "src/get_owned_objects.rs"

[[bin]]
name = "sui-client-events"
test = false
bench = false
path = "src/event_subscription.rs"

[[bin]]
name = "sui-client-transfer-coins"
test = false
bench = false
path = "src/transfer_coins.rs"

# [[bin]]
# name = "sui-client-mint"
# test = false
# bench = false
# path = "src/mint_nft.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
lto="off"

[profile.release]
lto="off"

[dependencies]
futures-core = "0.3.21"
futures = "0.3.23"
tokio = { features = ["full"] }
anyhow = "1.0.66"
dirs = "4.0.0"

sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }
sui-framework =  { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-json-rpc = { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-transaction-builder = { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-json-rpc-types= { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-types =  { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-json = { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-core = { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-config = { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-keys =  { git = "https://github.com/MystenLabs/sui", branch = "devnet"}

[dev-dependencies]
