[package]
name = "sui_client"
version = "0.1.0"
authors = ["Wondong Shin <wodshin@gmail.com>"]
edition = "2021"
description = "sui move contract caller"
readme = "README.md"
keywords = ["gamedev", "sui"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "main"
test = false
bench = false
path = "src/main.rs"

[[bin]]
name = "objects"
test = false
bench = false
path = "src/get_owned_objects.rs"

[[bin]]
name = "events"
test = false
bench = false
path = "src/event_subscription.rs"

[[bin]]
name = "transfer-coins"
test = false
bench = false
path = "src/transfer_coins.rs"

[[bin]]
name = "mint"
test = false
bench = false
path = "src/mint_nft.rs"

[[bin]]
name = "new_world"
test = false
bench = false
path = "src/new_world.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
lto="off"

[profile.release]
lto="off"

[dependencies]
futures-core = "0.3.21"
futures = "0.3.23"
#tokio = { features = ["full"] }
#tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tokio = { version = "1.21.2", features = ["full"] }

anyhow = "1.0.66"
dirs = "4.0.0"

serde = { version = "1.0.115" }
config = { version = "0.13", default-features = false, features = ["yaml"] }
requestty = "0.4.1"

sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }
sui-framework =  { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-json-rpc = { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-transaction-builder = { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-json-rpc-types= { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-types =  { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-json = { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-core = { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-config = { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
sui-keys =  { git = "https://github.com/MystenLabs/sui", branch = "devnet"}
fastcrypto = "0.1.3"
serde_json = "1.0.89"
#fastcrypto.workspace = true

[dev-dependencies]

#reqwest = { version = "0.11", features = ["json"] }

clap = { version = "4.0.27", features = ["derive"] }
dirs = "4.0.0"
async-recursion = "1.0.0"
tempfile = "3.3.0"
